<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="521dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="Welcome to Tic Tac Toe"
        android:textColor="#8242CF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/notify"
        android:layout_width="413dp"
        android:layout_height="226dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center|clip_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="Click Buttons to Acquire positions!"
        android:textColor="#DAC61E78"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.58" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintEnd_toEndOf="@+id/redHorizontal1"
        app:layout_constraintStart_toStartOf="@+id/redHorizontal1"
        app:layout_constraintTop_toTopOf="@+id/redDiagonal1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@+id/redHorizontal1"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/redHorizontal2"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintBottom_toBottomOf="@+id/redDiagonal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/redHorizontal3"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/ubuntu"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textColorLink="#FBFBFB"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="#C1551091"
        app:iconTint="#952828"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/again"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="Play Again"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#B2951662"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/purpleLine"
        android:textColor="#6A2DD8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/purpleLine"
        android:textColor="#6A2DD8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="230dp"
        android:layout_height="289dp"
        android:gravity="center"
        android:maxLines="1"
        android:rotation="90"
        android:text="@string/purpleLineV"
        android:textColor="#6A2DD8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="220dp"
        android:layout_height="289dp"
        android:gravity="center"
        android:maxLines="1"
        android:rotation="90"
        android:text="@string/purpleLineV"
        android:textColor="#6A2DD8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />


    <TextView
        android:id="@+id/redDiagonal1"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:gravity="center"
        android:maxLines="1"
        android:rotation="28"
        android:text="@string/redLineDiagonal"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/redDiagonal2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:maxLines="1"
        android:rotation="151"
        android:text="@string/redLineDiagonal"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/redHorizontal2"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/redLineDiagonal"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/redHorizontal1"
        android:layout_width="394dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/redLineDiagonal"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <TextView
        android:id="@+id/redHorizontal3"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/redLineDiagonal"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <TextView
        android:id="@+id/redVertical1"
        android:layout_width="287dp"
        android:layout_height="208dp"
        android:gravity="bottom"
        android:maxLines="1"
        android:rotation="90"
        android:text="@string/redLineVertical"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/again"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/redVertical2"
        android:layout_width="290dp"
        android:layout_height="214dp"
        android:gravity="center"
        android:maxLines="1"
        android:rotation="90"
        android:text="@string/redLineVertical"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/again"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/notify"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/redVertical3"
        android:layout_width="287dp"
        android:layout_height="208dp"
        android:gravity="top"
        android:maxLines="1"
        android:rotation="90"
        android:text="@string/redLineVertical"
        android:textColor="#DA366E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/again"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/notify"
        app:layout_constraintVertical_bias="0.559" />

    <TextView
        android:id="@+id/scoreBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#F3D85E37"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/notify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.5"
        android:maxLines="1" />

</androidx.constraintlayout.widget.ConstraintLayout>